--- a/Cocoon/Views/SubCategories/Edit.cshtml
+++ b/Cocoon/Views/SubCategories/Edit.cshtml
@@ -1,9 +1,29 @@
 ﻿@model G4Fit.Models.Domains.SubCategory
 @{
     ViewBag.Title = "تعديل " + Model.NameAr;
-    //var Categories = ViewBag.Categories as List<G4Fit.Models.Domains.Category>;
+    var Categories = ViewBag.Categories as List<G4Fit.Models.Domains.SubCategory>;
     Layout = "~/Views/Dashboard/Layout.cshtml";
 }
+
+<style>
+    .status-label {
+        padding: 5px 10px; /* padding لإنشاء مساحة داخلية */
+        font-size: 1.2rem; /* حجم الخط */
+        font-weight: bold; /* جعل النص غامق */
+        color: #ffffff; /* لون النص - يمكنك تغييره */
+        background-color: #007bff; /* لون الخلفية */
+        border: 2px solid #007bff; /* لون الإطار */
+        border-radius: 5px; /* جعل الحواف مدورة قليلاً */
+        transition: background-color 0.3s, border-color 0.3s; /* تأثير انتقال عند تغيير الخلفية */
+    }
+
+        /* تأثيرات عند التمرير */
+        .status-label:hover {
+            background-color: #0056b3; /* لون الخلفية عند التمرير */
+            border-color: #0056b3; /* لون الإطار عند التمرير */
+            cursor: pointer; /* تغيير شكل المؤشر عند التمرير */
+        }
+</style>
 <div class="panel panel-primary">
     <div class="panel-heading">
         <h3 class="panel-title"><i class="fa fa-fw fa-edit"></i> الاقسام الرئيسية</h3>
@@ -70,31 +90,47 @@
                                     </div>
                                 </div>
                             }
-                                <div class="row" style="margin:10px">
-                                    @*<div class="col-lg-6">
-                                        <div class="form-group">
-                                            <label for="CategoryId" class="col-sm-5 control-label required">القسم الرئيسى:</label>
-                                            <div class="col-sm-7">
-                                                <select name="CategoryId" id="CategoryId" class="select2 form-control">
-                                                    @foreach (var category in Categories)
-                                                    {
-                                                        <option @(Model.SubCategoryId == category.Id ? "selected" : "") value="@category.Id">@category.NameAr</option>
-                                                    }
-                                                </select>
-                                            </div>
-                                        </div>
-                                    </div>*@
-                                    <div class="col-lg-6">
-                                        <div class="form-group">
-                                            <label for="Image" class="col-sm-5 control-label">تعديل صوره القسم:</label>
-                                            <div class="col-sm-7">
-                                                <div class="input-group">
-                                                    <input class="form-control" type="file" name="Image" id="Image" accept="image/*" />
-                                                </div>
+                            <div class="row" style="margin:10px">
+
+                                <div class="col-lg-6">
+                                    <div class="form-group">
+                                        <label for="Image" class="col-sm-5 control-label">تعديل صوره القسم:</label>
+                                        <div class="col-sm-7">
+                                            <div class="input-group">
+                                                <input class="form-control" type="file" name="Image" id="Image" accept="image/*" />
                                             </div>
                                         </div>
                                     </div>
                                 </div>
+                            </div>
+                            <div class="row" style="margin:10px">
+                                <div class="col-lg-6">
+                                    <div class="form-group">
+                                        <label for="ConnectedToAnotherCategory" class="col-sm-5 control-label ">هل القسم مربوط بقسم اخر ؟  <span title="تغيير القيمه" id="timeBoundLabel" class="status-label">لا</span></label>
+
+                                        <div class="col-sm-7">
+                                            <div class="input-group">
+                                                @Html.CheckBoxFor(model => model.ConnectedToAnotherCategory, new { @class = "", @id = "ConnectedToAnotherCategory", onchange = "updateLabel()" })
+                                            </div>
+                                            @Html.ValidationMessageFor(d => d.ConnectedToAnotherCategory, "", new { @class = "text-danger" })
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6">
+                                    <div class="form-group">
+                                        <label for="ConnectedCategoryId" class="col-sm-5 control-label required">القسم المرتبط به :</label>
+                                        <div class="col-sm-7">
+                                            <select name="ConnectedCategoryId" id="CategoryId" class="select2 form-control">
+                                                @foreach (var category in Categories)
+                                                {
+                                                    <option @(Model.ConnectedCategoryId == category.Id ? "selected" : "") value="@category.Id">@category.NameAr</option>
+                                                }
+                                            </select>
+                                            @Html.ValidationMessageFor(d => d.ConnectedCategoryId, "", new { @class = "text-danger" })
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                             <button type="submit" class="btn btn-success">تعديل</button>
                         }
                     </div>
@@ -107,3 +143,23 @@
     </div>
 </div>
 
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+    <script type="text/javascript">
+        function updateLabel() {
+            var checkbox = document.getElementById('ConnectedToAnotherCategory');
+            var label = document.getElementById('timeBoundLabel');
+
+            if (checkbox.checked) {
+                label.textContent = "نعم"; // إذا كانت القيمة true، اجعل النص "نعم"
+            } else {
+                label.textContent = "لا"; // إذا كانت القيمة false، اجعل النص "لا"
+            }
+        }
+
+        // استدعاء الدالة عند تحميل الصفحة للتأكد من أن النص صحيح
+        document.addEventListener('DOMContentLoaded', function () {
+            updateLabel();
+        });
+    </script>
+}
