--- a/Cocoon/Views/Users/Clients.cshtml
+++ b/Cocoon/Views/Users/Clients.cshtml
@@ -74,6 +74,7 @@
                             <td>
                                 <a class="btn btn-info" href="@Url.Action("Index", "UserInBodyOperations", new { UserId = item.Id })">InBody List</a>
                                 @Html.ActionLink("معلومات", "Details", new { Id = item.Id }) |
+                                @Html.ActionLink("تغيير كلمه المرور", "ChangePassword", new { Id = item.Id }) |
                                 @Html.ActionLink("المحفظة", "Wallet", new { Id = item.Id }) |
                                 @Html.ActionLink(item.IsDeleted == true ? "فك الحظر" : "حظر", "ToggleBlock", new { Id = item.Id })
                             </td>
