sms and solve some errors

--- a/Cocoon/Views/Account/VerifyCode.cshtml
+++ b/Cocoon/Views/Account/VerifyCode.cshtml
@@ -51,7 +51,7 @@
                                     <button type="submit" class="btn text-white" style="background-color:black">@Website.Verify</button>
                                 </div>
                                 <div class="col-lg-12 text-center mt-2">
-                                    <a href="@Url.Action("ResendVcode","Account")">@Website.ResendCode</a><br />
+                                    <a style="color:black;" href="@Url.Action("ResendVcode","Account")">@Website.ResendCode</a><br />
                                 </div>
                             </div>
                         }
