--- a/Cocoon/Views/Account/Register.cshtml
+++ b/Cocoon/Views/Account/Register.cshtml
@@ -64,7 +64,7 @@
                                                 <a class=" mr-3 ml-3" style="color: black; text-decoration: underline;"
                                                    onmouseover="this.style.color='blue'"
                                                    onmouseout="this.style.color='black'"
-                                                   href="@Url.Action("Terms", "Home")" target="_blank">
+                                                   href="@Url.Action("Index", "Terms")" target="_blank">
                                                     @(culture == "ar" ? "الموافقة على الشروط والأحكام" : "Accept Terms and Conditions")
                                                 </a>
                                             </label>
