--- a/Cocoon/Views/Orders/Details.cshtml
+++ b/Cocoon/Views/Orders/Details.cshtml
@@ -234,6 +234,9 @@
                                         case G4Fit.Models.Enums.PaymentMethod.Tabby:
                                             <span>الدفع اون لاين - تابي</span>
                                             break;
+                                        case G4Fit.Models.Enums.PaymentMethod.Tamara:
+                                            <span>الدفع اون لاين - تمارا</span>
+                                            break;
                                     }
                                 </td>
                             </tr>
