--- a/Cocoon/Views/Orders/Invoice.cshtml
+++ b/Cocoon/Views/Orders/Invoice.cshtml
@@ -63,14 +63,20 @@
                             <p>@(culture == "ar" ? item.Service.NameAr : item.Service.NameEn)</p>
                         </td>
                         <td class="description">
+                            @{
+                                var description = culture == "ar"
+                                    ? (item.Service.DescriptionAr ?? item.Service.DescriptionEn)
+                                    : item.Service.DescriptionEn;
 
-                            <p>
-                                @(
-        culture == "ar"
-        ? @Html.Raw(Regex.Replace(item.Service.DescriptionAr ?? item.Service.DescriptionEn, @"<[^>]+?>", "").Replace("\r\n", "<br />").Replace("\n", "<br />"))
-        : @Html.Raw(Regex.Replace(item.Service.DescriptionEn, @"<[^>]+?>", "").Replace("\r\n", "<br />").Replace("\n", "<br />"))
-    )
-                            </p>
+                                var cleanDescription = Regex.Replace(description ?? "", @"<[^>]+?>", "")
+                                                             .Replace("\r\n", "<br />")
+                                                             .Replace("\n", "<br />");
+                            }
+
+                            @if (!string.IsNullOrWhiteSpace(cleanDescription))
+                            {
+                                <p>@Html.Raw(cleanDescription)</p>
+                            }
 
 
                         </td>
@@ -81,15 +87,15 @@
                         }
                         else
                         {
-                    <td>
-                        <div class="qty">@item.Quantity أيام إشتراك</div>
-                        @if (item.ColorId.HasValue)
-                        {
+                            <td>
+                                <div class="qty">@item.Quantity أيام إشتراك</div>
+                                @if (item.ColorId.HasValue)
+                                {
 
-                            <br />
-                            <span>  المدرب: @item.Color.Color</span>
-                        }
-                    </td>
+                                    <br />
+                                    <span>  المدرب: @item.Color.Color</span>
+                                }
+                            </td>
                         }
                         <td><div class="price">@item.SubTotal @(culture == "ar" ? "ريال سعودي" : "SAR")</div></td>
                     </tr>
