--- a/Cocoon/Views/Wallets/Index.cshtml
+++ b/Cocoon/Views/Wallets/Index.cshtml
@@ -19,7 +19,7 @@
             </div>
             <hr />
         </div>
-        <div class="container-fluid">
+        <div class="container-fluid" style=" background-color: aliceblue;">
             <div class="table-responsive text-center">
                 <table id="table" cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered table-hover">
                     <thead>
